--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!-- <head>
+    <head>
       <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       />
-    </head> -->
+    </head>
 
     <title>React App</title>
   </head>
